Accessbility Bug Fix | High Contrast Mode

--- a/src/UXClient/Components/Legend/Legend.scss
+++ b/src/UXClient/Components/Legend/Legend.scss
@@ -215,6 +215,9 @@
 			.tsi-seriesLabel {
 				.tsi-seriesNameLabel .tsi-eyeIcon, .tsi-splitByContainer .tsi-splitByLabel .tsi-eyeIcon {
 					background-image: url(../../Icons/Eye_light_theme.svg);
+					@media screen and (-ms-high-contrast: white-on-black) { 
+						background-image: url(../../Icons/Eye_dark_theme.svg);      
+					}
 				}
 			}
 		}
